RESOLVED FIXED111209
DFG Branch(LogicalNot) peephole should not try to optimize and work-around the case where LogicalNot may be otherwise live
https://bugs.webkit.org/show_bug.cgi?id=111209
Summary DFG Branch(LogicalNot) peephole should not try to optimize and work-around th...
Filip Pizlo
Reported 2013-03-01 12:34:00 PST
Even if it is then everything will work just fine. It's not necessary to check the ref count here.
Attachments
the patch (1.52 KB, patch)
2013-03-01 12:35 PST, Filip Pizlo
oliver: review+
Filip Pizlo
Comment 1 2013-03-01 12:35:20 PST
Created attachment 191014 [details] the patch
Filip Pizlo
Comment 2 2013-03-01 13:08:25 PST
Note You need to log in before you can comment on or make changes to this bug.