DFG Branch(LogicalNot) peephole should not try to optimize and work-around the case where LogicalNot may be otherwise live https://bugs.webkit.org/show_bug.cgi?id=111209

Reviewed by Oliver Hunt.

Even if it is then everything will work just fine. It's not necessary to check the ref count here.

* dfg/DFGFixupPhase.cpp:
(JSC::DFG::FixupPhase::fixupNode):



Canonical link: https://commits.webkit.org/129546@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@144486 268f45cc-cd09-0410-ab3c-d52691b4dbfc