Source/JavaScriptCore/dfg/DFGFixupPhase.cpp
@@ -493,8 +493,7 @@ private:
                 fixDoubleEdge<NumberUse>(node->child1());
 
             Node* logicalNot = node->child1().node();
-            if (logicalNot->op() == LogicalNot
-                && logicalNot->adjustedRefCount() == 1) {
+            if (logicalNot->op() == LogicalNot) {
                 
                 // Make sure that OSR exit can't observe the LogicalNot. If it can,
                 // then we must compute it and cannot peephole around it.
